@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-18T01:27:22Z",
-  "count_outdated" : 366,
-  "uniques_outdated" : 230,
+  "timestamp" : "2022-07-18T16:23:42Z",
+  "count_outdated" : 367,
+  "uniques_outdated" : 231,
   "count" : 392,
   "uniques" : 247,
   "clones" : [
-    {
-      "timestamp": "2022-07-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-05T00:00:00Z",
       "count": 1,
